# PythonProject

./: README.md  Test.py  pyproject.toml  requirements.txt
code/: README.md  create_python_course.py  create_python_course_full.py  grok.py  grok_fastapi.py  python_context_manager.py  table.py
code/ankit/01_basics/: 01 _variables.py  02 _operators.py  06 _user_input.py  07 _conditions.py
code/ankit/02_loops/: 01_while_loop.py  03_break_continue_pass.py  04_pattern_printing.py
code/ankit/03_data_structures/: 01_list_demo.py  02_tuple_set_demo.py
code/ankit/04_oop/: 02_init_and_methods.py  04_method_overloading.py  05_operator_overloading.py
code/python_course/: README.md
code/python_course_full/: README.md
code/python_course_telusko/: README.md
src/: README.md  create_python_course.py  grok.py  grok_fastapi.py  python_context_manager.py
src/ankit/01_basics/: 00 _hello_world.py  (+3 more)
src/db_code/: create_tables.py  db.py  main.py  models.py  request_dto_schemas.py  security.py  users_api.py  utils.py
src/general/: decorator_table.py  fastAPI.py  grok.py  multi_retriever_rerank.py  oauth2_jwt.py  pattern.py  python_context_manager.py
src/llm/: sentence-transformers-test.py  torch-test.py
src/multi_rag_pipeline/: .env  Dockerfile.api  Dockerfile.ui  agent.py  authenticated_server.py  config.py  data.py  docker-compose.yml  extractors.py  rag_pipline.py  requirements.txt  reranker.py  retriever.py  server.py  ui_app.py
src/numpy/: 1_basic.py
src/rag_service/: README.md  app.py  benchmark_chunks.py  chain.py  requirements.txt  reranker.py  retrievers.py
(+122 files in other folders)
