[project]
name = "pythonproject"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "bcrypt==4.0.1",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "passlib==1.7.4",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.46",
    "starlette>=0.50.0",
    "streamlit>=1.53.0",
    "uvicorn>=0.40.0",
]
